<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_mr"
            android:icon="@drawable/ic_nfc_black_24dp"
            android:title="@string/maze_rats"/>
        <item
            android:id="@+id/nav_pw"
            android:icon="@drawable/ic_terrain_black_24dp"
            android:title="@string/perilous_wilds"/>
        <item
            android:id="@+id/nav_fotf"
            android:icon="@drawable/ic_wallpaper_black_24dp"
            android:title="@string/freebooters_on_the_frontier"/>

        <item
            android:id="@+id/nav_dice"
            android:icon="@drawable/dice_6"
            android:title="@string/dice_roller"/>

        <item android:id="@+id/nav_thanks"
              android:icon="@drawable/ic_help"
              android:title="@string/nav_thanks"/>
    </group>

</menu>
